# layered

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  PLATFORMS.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  TESTING.md  package.json
.github/workflows/: release.yml  rust.yml
crates/app/: Cargo.toml  build.rs
crates/app/assets/: style.css
crates/app/src/: actions.rs  app.rs  components.rs  dispatch.rs  file.rs  file_dialog.rs  input.rs  keyboard.rs  main.rs  settings.rs  shell.rs  storage.rs
crates/app/src/components/: breadcrumb.rs  command_palette.rs  confirm_delete_dialog.rs  document_map_pane.rs  error_dialog.rs  ext_modified_dialog.rs  focus_editor.rs  focused_content_pane.rs  outline_pane.rs  overview_pane.rs  preview_pane.rs  raw_source.rs  search_panel.rs  split_dialog.rs  status_bar.rs  toolbar.rs  unsaved_dialog.rs  welcome.rs
crates/app/src/file/: file_dialog.rs
crates/app/src/input/: keyboard.rs
crates/app/src/input/keyboard/: tests.rs
crates/app/src/shell/: actions.rs  app.rs  app_ctx.rs  dispatch.rs
crates/app/src/storage/: settings.rs
crates/app/src/storage/settings/: tests.rs
crates/core/: Cargo.toml
crates/layerd-core/: Cargo.toml
crates/layerd-desktop/: Cargo.toml
crates/layerd-desktop/assets/: style.css
crates/layerd-desktop/src/: app.rs  file_dialog.rs  keyboard.rs  main.rs  settings.rs
crates/layerd-desktop/src/components/: breadcrumb.rs  command_palette.rs  confirm_delete_dialog.rs  error_dialog.rs  ext_modified_dialog.rs  focus_editor.rs  mod.rs  outline_pane.rs  overview_pane.rs  preview_pane.rs  raw_source.rs  search_panel.rs  split_dialog.rs  status_bar.rs  toolbar.rs  unsaved_dialog.rs  welcome.rs
crates/layerd-ui/: Cargo.toml
crates/layerd-ui/src/: file_profile.rs  lib.rs  navigation.rs  search.rs  session.rs  stats.rs  tests.rs  view_state.rs
crates/layerd-ui/src/i18n/: en.rs  ja.rs  mod.rs
crates/layerd-ui/src/tests/: i18n_tests.rs  session_tests.rs  view_state_tests.rs
crates/layered-core/: Cargo.toml
crates/layered-core/benches/: indexing.rs
crates/layered-core/src/: document.rs  error.rs  lib.rs  outline.rs  tests.rs
crates/layered-core/tests/: fixture_catalog.rs  source_preservation.rs  structural_ops.rs
crates/layered-core/tests/fixtures/: academic-paper.md  duplicate_titles.md  large-10k-words.md  nested_atx.md  no_trailing_newline.md  skipped_levels.md
crates/layered-desktop/: Cargo.toml  build.rs
crates/layered-desktop/assets/: style.css
crates/layered-desktop/src/: actions.rs  app.rs  app_ctx.rs  dispatch.rs  file_dialog.rs  keyboard.rs  main.rs  settings.rs
crates/layered-desktop/src/components/: breadcrumb.rs  command_palette.rs  confirm_delete_dialog.rs  error_dialog.rs  ext_modified_dialog.rs  focus_editor.rs  outline_pane.rs  overview_pane.rs  preview_pane.rs  raw_source.rs  search_panel.rs  split_dialog.rs  status_bar.rs  toolbar.rs  unsaved_dialog.rs  welcome.rs
crates/layered-ui/: Cargo.toml
crates/layered-ui/src/: commands.rs  file_profile.rs  lib.rs  navigation.rs  search.rs  session.rs  stats.rs  tests.rs  view_state.rs
crates/layered-ui/src/i18n/: en.rs  ja.rs  mod.rs
crates/layered-ui/src/session/: outline_bridge.rs  structural.rs
crates/layered-ui/src/tests/: session_tests.rs  view_state_tests.rs
crates/ui/: Cargo.toml
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  editing-and-history.md  getting-started.md  introduction.md  keyboard-reference.md  known-limitations.md  languages.md  source-preservation.md  structural-editing.md  working-in-layers.md
packaging/windows/: AppxManifest.xml
rfcs/: README.md
rfcs/done/: 001-project-architecture-and-crate-boundaries.md  002-canonical-markdown-text-model.md  003-heading-indexing-spike.md  004-source-preserving-section-replacement.md  005-core-document-api.md  006-node-identity-and-range-semantics.md  007-markdown-heading-tree-construction.md  008-core-edit-operation-model.md  009-core-error-and-validation-model.md  010-desktop-application-shell.md  011-outline-and-overview-ui.md  012-focus-editor-ui.md  013-breadcrumb-and-hierarchical-navigation.md  014-basic-keyboard-interaction.md  015-file-open-and-save-lifecycle.md  016-dirty-state-and-unsaved-change-protection.md  017-raw-markdown-escape-hatch.md  018-line-endings-encoding-and-file-integrity.md  019-focus-history-and-back-forward-navigation.md  020-sibling-and-depth-navigation.md  021-search-and-result-navigation.md  022-command-palette-and-command-registry.md  023-promote-and-demote-heading-operations.md  024-move-section-operations.md  025-split-merge-and-delete-section-operations.md  026-structural-edit-validation-and-conflict-rules.md  027-semantic-html-and-aria-model.md  028-keyboard-focus-and-navigation-accessibility.md  029-accessible-editor-status-and-error-feedback.md  030-visual-clarity-contrast-and-motion-policy.md  031-performance-targets-and-measurement-plan.md  032-re-index-strategy-and-debounce-lifecycle.md  033-render-boundary-and-state-update-policy.md  034-large-document-test-fixtures.md  035-cross-platform-desktop-runtime-policy.md  036-settings-and-recent-files-storage.md  037-packaging-and-release-artifacts.md  038-platform-smoke-test-matrix.md  039-error-handling-and-user-facing-failure-modes.md  040-test-strategy-and-regression-policy.md  (+7 more)
rfcs/handoffs/: README.md
rfcs/proposed/: 010-desktop-application-shell.md  011-outline-and-overview-ui.md  012-focus-editor-ui.md  013-breadcrumb-and-hierarchical-navigation.md  014-basic-keyboard-interaction.md  015-file-open-and-save-lifecycle.md  016-dirty-state-and-unsaved-change-protection.md  017-raw-markdown-escape-hatch.md  018-line-endings-encoding-and-file-integrity.md  019-focus-history-and-back-forward-navigation.md  (+33 more)
scripts/: check-rfcs.sh
src/: app.html  constants.ts  fonts.css  styles.css  type.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: handlers.rs  lib.rs  main.rs
src-tauri/src/core/: editor.rs  types.rs  utils.rs
src-tauri/src/editor/: content.rs  dev.rs  file.rs  handlers.rs  mod.rs  types.rs
(+125 files in other folders)
