[workspace]
resolver = "3"
members = [
    "crates/layered-core",
    "crates/layered-ui",
    "crates/layered-desktop",
]
# `layered-desktop` links against the platform WebView stack (wry/tao); building it
# requires native system libraries (e.g. webkit2gtk on Linux). Core and UI logic
# build and test everywhere, so they are the default members (RFC-001).
default-members = [
    "crates/layered-core",
    "crates/layered-ui",
]

[workspace.package]
version = "0.12.1"
edition = "2024"
license = "Apache-2.0"
authors = ["nabbisen"]
repository = "https://github.com/nabbisen/layered"
rust-version = "1.85"

[workspace.dependencies]
layered-core = { path = "crates/layered-core", version = "0.12.1" }
layered-ui = { path = "crates/layered-ui", version = "0.12.1" }
pulldown-cmark = { version = "0.13", default-features = false }
dirs = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
strip = true
lto = "thin"
