[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/ui",
    "crates/app",
]
# `omriss-app` links against the platform WebView stack (wry/tao); building it
# requires native system libraries (e.g. webkit2gtk on Linux). Core and UI logic
# build and test everywhere, so they are the default members (RFC-001).
default-members = [
    "crates/core",
    "crates/ui",
]

[workspace.package]
version = "0.14.0"
edition                 = "2024"
rust-version            = "1.87"
license                 = "Apache-2.0"
authors                 = ["nabbisen"]
repository              = "https://github.com/nabbisen/omriss"

[workspace.dependencies]
omriss              = { version = "0.14.0", path = "crates/core" }
omriss-ui           = { version = "0.14.0", path = "crates/ui" }

# UI
dioxus              = { version = "0.7", features = ["desktop"] }
dioxus-swdir-tree   = { version = "0.9", default-features = false }
rfd                 = "0.15"
keyboard-types      = "0.7"

# backend
dirs                = "5"
pulldown-cmark      = { version = "0.13", default-features = false }

# general
serde               = { version = "1", features = ["derive"] }
toml                = "0.8"

# test
criterion           = { version = "0.5", features = ["html_reports"] }

[profile.release]
strip = true
lto = "thin"
