[package]
name = "layered"
version = "0.2.3"
edition = "2021"

description = "Editor manipulating layered paragraphs "
authors = ["nabbisen"]
license-file = "../LICENSE"

categories = ["gui", "visualization", "value-formatting", "text-processing"]
keywords = ["gui", "text"]
rust-version = "1.81.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "layered_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

pulldown-cmark = { version = "^0.12", default-features = false, features = ["html"] }
