[package]
name = "omriss-app"
description = "Desktop GUI shell for Omriss (Dioxus + system WebView)"
readme = "../../README.md"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true

# Building this crate links the platform WebView stack. On Linux install the
# system packages first (Debian/Ubuntu):
#   libwebkit2gtk-4.1-dev libjavascriptcoregtk-4.1-dev \
#   libgtk-3-dev libxdo-dev libssl-dev
# Windows (WebView2) and macOS (WKWebView) need no extra packages.
# This crate is intentionally NOT in the workspace default-members so that
# `cargo test` works on hosts without GUI libraries (RFC-001).

[dependencies]
omriss              = { workspace = true }
omriss-ui           = { workspace = true }

dioxus              = { workspace = true }
dioxus-swdir-tree   = { workspace = true }
rfd                 = { workspace = true }
keyboard-types      = { workspace = true }

dirs                = { workspace = true }
serde               = { workspace = true }
toml                = { workspace = true }

[[bin]]
name = "omriss"
path = "src/main.rs"
