[package]
name = "layerd-ui"
description = "View-state logic, i18n catalogs, and GUI components for the layerd editor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
layerd-core.workspace = true
