[package]
name = "layered-core"
description = "Source-preserving Markdown document engine for layered (canonical text, outline index, edit operations)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

# RFC-001 boundary rule: this crate must never depend on Dioxus, WebView,
# file-dialog, or desktop runtime crates.
[dependencies]
pulldown-cmark.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "indexing"
harness = false
