[package]
name = "layered-desktop"
description = "Desktop GUI shell for the layered editor (Dioxus + system WebView)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# Building this crate links the platform WebView stack. On Linux install the
# system packages first (Debian/Ubuntu):
#   libwebkit2gtk-4.1-dev libjavascriptcoregtk-4.1-dev \
#   libgtk-3-dev libxdo-dev libssl-dev
# Windows (WebView2) and macOS (WKWebView) need no extra packages.
# This crate is intentionally NOT in the workspace default-members so that
# `cargo test` works on hosts without GUI libraries (RFC-001).

[dependencies]
layered-core.workspace = true
layered-ui.workspace = true
dioxus = { version = "0.7", features = ["desktop"] }
rfd = "0.15"
keyboard-types = "0.7"
dirs.workspace = true
serde.workspace = true
toml.workspace = true
