[package]
name = "layered-ui"
description = "View-state logic, i18n catalogs, and GUI components for the layered editor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
layered-core.workspace = true
